--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,17 @@
     "tests"
   ],
   "dependencies": {
-    "socket.io-client": "~1.4.5"
+    "socket.io-client": "~1.4.5",
+    "angular": "~1.5.3",
+    "angular-animate": "~1.5.3",
+    "angular-material": "~1.0.7",
+    "angular-ui-router": "~0.2.18",
+    "normalize-css": "normalize.css#~4.0.0",
+    "angular-socket-io": "~0.7.0",
+    "font-awesome": "~4.5.0",
+    "angular-route": "~1.5.3"
+  },
+  "devDependencies": {
+    "protractor": "~3.2.2"
   }
 }
